--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
             <h1 class="FarmerConnect">FarmerConnect</h1>
         <nav class="nav-bar">
+            <li></li>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">You Farmer</a></li>
@@ -40,10 +41,11 @@
         </div>
     </div>
     <div class="login">
-        <button class="button" onclick="farmer()">Farmers Id</button>
-        <button class="button1">User Id</button>
+        <button class="button"><a href="farmers.html">Farmers Id</a></button>
+        <button class="button1"><a href="user.html">User Id</a></button>
     </div>
-    <h2 id="our-services">Our Sevices</h2>
+    <marquee behavior="#" direction="left">New Update : For new updates <a href="https://www.tn.gov.in/whatsnew/impt">Click here</a></marquee>
+    <h2 id="our-services">Our Services</h2>
     <div class="container2">
         <div class="card">
             <div class="img-div"><img class="card-img"  src="product.png" alt=""></div>
@@ -51,15 +53,15 @@
                 <label class="card-name">Purchase products</label><br>
                 <label class="sample-description">Here purchase a food products...</label>
             </div>
-            <button class="card-btn" onclick="products()">More details</button>   
+            <button class="card-btn" ><a href="products.html">More details</a></button>   
         </div>
         <div class="card">
             <div class="img-div"><img class="card-img"  src="shield.png" alt=""></div>
             <div class="words-div">
-                <label class="card-name">Crop Updates</label><br>
+                <label class="card-name">Farm Maintanance</label><br>
                 <label class="sample-description">To see more deatils about crop click here..</label>
             </div>
-            <button class="card-btn">More details</button>
+            <button class="card-btn" ><a href="https://pesticidefacts.org/resources/">More details</a></button>
         </div>
         <div class="card">
             <div class="img-div"><img class="card-img"  src="herbicide.png" alt=""></div>
@@ -67,15 +69,15 @@
                 <label class="card-name">Pesticide</label><br>
                 <label class="sample-description">Buy a harmless and natural fertilizers..</label>
             </div>
-            <button class="card-btn">More details</button>
+            <button class="card-btn" ><a href="https://www.indiapesticideslimited.com/product.php?type=Technicals">More details</a></button>
         </div>
         <div class="card">
-            <div class="img-div"><img class="card-img"  src="tractor.png" alt=""></div>
+            <div class="img-div"><img class="card-img"  src="mechanical-gears-.png" alt=""></div>
             <div class="words-div">
-                <label class="card-name">Vehicles Services</label><br>
+                <label class="card-name">Services</label><br>
                 <label class="sample-description" >Take agri vechicle for less rent..</label>
             </div>
-            <button class="card-btn">More details</button>
+            <button class="card-btn" ><a href="https://www.tn.gov.in/service/deptname">More details</a></button>
         </div>
         <div class="card">
             <div class="img-div"><img class="card-img" src="team.png" alt=""></div>
@@ -83,8 +85,9 @@
                 <label class="card-name">Govt Schemes</label><br>
                 <label class="sample-description">Farmers welfare programs and Schemes</label>
             </div>
-            <button class="card-btn" onclick="govtscheme()">More details</button>
+            <button class="card-btn" ><a href="https://www.tn.gov.in/scheme">More details</a></button>
         </div>
+        <!--
         <div class="card">
             <div class="img-div"><img class="card-img"  src="weather-forecast.png" alt=""></div>
             <div class="words-div">
@@ -94,9 +97,8 @@
             </div>
             <button class="card-btn">More details</button>
         </div>
+        -->
     </div>
-
-    
     <div class="help-center">
         <h2 id="help-center">Help Center</h2>        
         <label for="#" class="input-header">Your Mail</label>
