--- a/products.html
+++ b/products.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="products.css">
+    <script src="products.js">
+
+    </script>
 </head>
 <body>
     <div class="container">
@@ -25,8 +28,8 @@
     <div class="container1">
         <div class="words">
             <h1 class="heading">Tomato</h1>
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. At eaque architecto corrupti tempore? Officiis totam error qui, nobis facere animi tempora commodi omnis molestiae quam ut modi vero iste quibusdam deleniti sunt hic recusandae quisquam, quasi in. Alias harum esse voluptates modi minima, consequuntur, officia facere rem numquam sunt commodi!</P>
-            <button class="more-details">More deatils</button>
+            <P>Tomato is a popular fruit commonly used as a vegetable in cooking. It comes in various sizes, shapes, and colors, with red being the most common. Tomatoes are rich in vitamins, minerals, and antioxidants, known for their health benefits. They're versatile ingredients, used in salads, sauces, soups, and sandwiches, adding flavor and nutrition to a wide range of dishes.</P>
+            <button class="more-details" ><a href="purchase.html">More details</a></button>
         </div>
         <div class="img-div">
             <img src="tomato.jpeg" alt="">
@@ -39,8 +42,8 @@
         </div>
         <div class="words">
             <h1 class="heading">Onion</h1>
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. At eaque architecto corrupti tempore? Officiis totam error qui, nobis facere animi tempora commodi omnis molestiae quam ut modi vero iste quibusdam deleniti sunt hic recusandae quisquam, quasi in. Alias harum esse voluptates modi minima, consequuntur, officia facere rem numquam sunt commodi!</P>
-            <button class="more-details">More deatils</button>
+            <P>Onion is a bulb vegetable widely used in cooking for its pungent flavor and aroma. It comes in various colors, including white, yellow, and red. Onions are rich in antioxidants and nutrients like vitamin C and fiber. They can be eaten raw, cooked, or caramelized, adding depth of flavor to dishes such as soups, stews, salads, and stir-fries. Additionally, onions are a staple ingredient in many cuisines worldwide.</P>
+            <button class="more-details"><a href="onion.html">More details</a></button>
         </div>
        
     </div>
@@ -49,8 +52,8 @@
         
         <div class="words">
             <h1 class="heading">Potato</h1>
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. At eaque architecto corrupti tempore? Officiis totam error qui, nobis facere animi tempora commodi omnis molestiae quam ut modi vero iste quibusdam deleniti sunt hic recusandae quisquam, quasi in. Alias harum esse voluptates modi minima, consequuntur, officia facere rem numquam sunt commodi!</P>
-            <button class="more-details">More deatils</button>
+            <P>Potato is a starchy tuberous crop known for its versatility in cooking and nutritional value. With a variety of types ranging from russet to red to sweet, potatoes offer an array of flavors and textures.` Potatoes can be boiled, baked, mashed, fried, or roasted, making them a fundamental ingredient in dishes like fries, chips, soups, and casseroles, offering both comfort and sustenance.</P>
+            <button class="more-details"><a href="potato.html">More details</a></button>
         </div>
         <div class="img-div">
             <img src="Potato.jpeg" alt="">
@@ -62,9 +65,9 @@
             <img src="Cabage.jpeg" alt="">
         </div>
         <div class="words">
-            <h1 class="heading">Cabage</h1>
-            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. At eaque architecto corrupti tempore? Officiis totam error qui, nobis facere animi tempora commodi omnis molestiae quam ut modi vero iste quibusdam deleniti sunt hic recusandae quisquam, quasi in. Alias harum esse voluptates modi minima, consequuntur, officia facere rem numquam sunt commodi!</P>
-            <button class="more-details">More deatils</button>
+            <h1 class="heading">Cabbage</h1>
+            <P>Cabbage is a leafy green or purple vegetable belonging to the Brassica family, prized for its crunchy texture and mild flavor. Rich in vitamins K, C, and fiber, cabbage offers numerous health benefits. It's versatile in cooking, being used raw in salads, fermented as sauerkraut, or cooked in soups, stir-fries, and stews. With its ability to be easily incorporated into various dishes.</P>
+            <button class="more-details"><a href="cabbage.html">More details</a></button>
         </div>
     </div>
     <label for="#" class="label">This website under Progress</label>
