--- a/user.html
+++ b/user.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="farmers.css">
-    <script src="farmer.js"></script>
+    <link rel="stylesheet" href="user.css">
+    <script src="farmer.js">
+
+    </script>
 </head>
 <body>
     <div class="container1">
         <div class="container2">
-
+            <h1 class="thought">
+                Welcome To FarmerConnect
+            </h1>
+            <p>
+                Dear users you got a perfect choice for your healthy life,Stay connect with FarmerConnect to live a healthy Life
+            </p>
         </div>
         <div class="container3">
             <div class="circle">
@@ -31,6 +38,6 @@
     <div class="design">
 
     </div>
-  
+   
 </body>
 </html>
