--- a/amount.html
+++ b/amount.html
@@ -11,7 +11,7 @@
     
 <div class="container">
 
-    <form action="file:///G:/HTML%20Learning/FarmerConnect/final.html">
+    <form action="final.html">
 
         <div class="row">
 
