--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="img-div"><img class="card-img"  src="shield.png" alt=""></div>
             <div class="words-div">
                 <label class="card-name">Farm Maintanance</label><br>
-                <label class="sample-description">To see more deatils about crop click here..</label>
+                <label class="sample-description">To Know how to maintain Farm.</label>
             </div>
             <button class="card-btn" ><a href="https://pesticidefacts.org/resources/">More details</a></button>
         </div>
@@ -67,7 +67,7 @@
             <div class="img-div"><img class="card-img"  src="herbicide.png" alt=""></div>
             <div class="words-div">
                 <label class="card-name">Pesticide</label><br>
-                <label class="sample-description">Buy a harmless and natural fertilizers..</label>
+                <label class="sample-description">know about harmless and natural fertilizers..</label>
             </div>
             <button class="card-btn" ><a href="https://www.indiapesticideslimited.com/product.php?type=Technicals">More details</a></button>
         </div>
@@ -75,7 +75,7 @@
             <div class="img-div"><img class="card-img"  src="mechanical-gears-.png" alt=""></div>
             <div class="words-div">
                 <label class="card-name">Services</label><br>
-                <label class="sample-description" >Take agri vechicle for less rent..</label>
+                <label class="sample-description" >More services farmers are available here</label>
             </div>
             <button class="card-btn" ><a href="https://www.tn.gov.in/service/deptname">More details</a></button>
         </div>
